<resources>
	<!--  Application -->
	<string name="app_name">Bluetooth Remote</string>
	<string name="app_description">Bluetooth Remote: This application will let you communicate with another Android device or a Raspberry through Bluetooth. It uses the bluetooth Serial Port Profile.</string>

	<!--  Toolbar -->
	<string name="tb_action_thumb">Thumb up / Thumb down</string>

	<!--  LoginActivity -->
	<string name="title_activity_login_screen">Bluetooth Remote</string>
	<string name="start">Start</string>
	<string name="name_hint">Enter your name here</string>

	<!--  MainActivity -->
	<string name="title_activity_main">Bluetooth Remote</string>
	<string name="main_welcome">Hallo %1$s!</string>
	<string name="main_button_random_math_test">Generate a Random Number</string>
	<string name="main_TV_random_number">Random Number</string>

	<!--  Kickpanel & Tribot -->
	<string name="button_device_list">Select a device to connect with</string>

	<!--  KickPanelActivity -->
	<string name="title_activity_kickpanel">KickPanel Remote</string>
	<string name="kickpanel_bt_state_connecting">Bluetooth: connecting</string>
	<string name="kickpanel_bt_state_connected">Bluetooth: connected</string>
	<string name="kickpanel_bt_state_listening">Bluetooth: listening</string>
	<string name="kickpanel_bt_state_none">Bluetooth: disconnected</string>
	<string name="kickpanel_button_test">Show dialog</string>
	<string name="kickpanel_button_listen">Listen to Bluetooth</string>

	<!--  TribotActivity -->
	<string name="title_activity_tribot">Tribot Remote</string>
	<string name="tribot_TV_MAC_address">Please select a device to connect with</string>
	<string name="tribot_button_send_name">Send name</string>
	<string name="tribot_button_choose_rounds">Choose the amount of rounds</string>
	<string name="tribot_button_send_rounds">Send the number of rounds</string>
	<string name="tribot_button_set_rounds">Set</string>

	<!--  DeviceListActivity -->
	<string name="title_activity_device_list">Select a device</string>
	<string name="none_paired">No devices have been paired</string>
	<string name="none_found">No devices found</string>
	<string name="subtitle_paired_devices">Paired Devices</string>
	<string name="subtitle_other_devices">Other Available Devices</string>
	<string name="button_scan">Scan for devices</string>

	<!-- TribotActivity NEW -->
	<string name="title_activity_tribot_new">Tribot Remote New</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Strings related to Settings -->

	<!-- Example General settings -->
	<string name="pref_header_general">General</string>

	<string name="pref_title_social_recommendations">Enable social recommendations</string>
	<string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

	<string name="pref_title_display_name">Display name</string>
	<string name="pref_default_display_name">John Smith</string>

	<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
	<string-array name="pref_example_list_titles">
		<item>Always</item>
		<item>When possible</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_example_list_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>

	<!-- Example settings for Data & Sync -->
	<string name="pref_header_data_sync">Data &amp; sync</string>

	<string name="pref_title_sync_frequency">Sync frequency</string>
	<string-array name="pref_sync_frequency_titles">
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_sync_frequency_values">
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>-1</item>
	</string-array>

	<string-array name="list_preference_entries">
		<item>Entry 1</item>
		<item>Entry 2</item>
		<item>Entry 3</item>
	</string-array>

	<string-array name="list_preference_entry_values">
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>

	<string-array name="multi_select_list_preference_default_value"/>

	<string name="pref_title_system_sync_settings">System sync settings</string>

	<!-- Example settings for Notifications -->
	<string name="pref_header_notifications">Notifications</string>

	<string name="pref_title_new_message_notifications">New message notifications</string>

	<string name="pref_title_ringtone">Ringtone</string>
	<string name="pref_ringtone_silent">Silent</string>

	<string name="pref_title_vibrate">Vibrate</string>

</resources>
