<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:key="pref_key_A"
		android:title="Very pretty category">
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="pref_key_advanced_settings"
			android:summary="WARNING: These settings can be dangerous and might cause harm to you or others. Use at your own risk."
			android:title="Advanced Settings"/>
		<Preference
			android:dependency="pref_key_advanced_settings"
			android:key="pref_key_world_domination"
			android:summary="Eliminate inferior life forms"
			android:title="Kill all human beings"/>
		<CheckBoxPreference
			android:dependency="pref_key_advanced_settings"
			android:key="pref_key_mms_delete_limit"
			android:summary="Experience the ultimate light show. Including but not limited to; laz0rz, traffic lights, and our homemade strobe lights."
			android:title="Disco Mode"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:key="pref_key_B"
		android:title="Another one">
		<ListPreference
			android:defaultValue="Aap"
			android:key="pref_key_list"
			android:summary="Current selected setting"
			android:title="List settings"/>
		<ListPreference
			android:defaultValue="Aap"
			android:key="pref_key_list"
			android:summary="Current selected setting"
			android:title="List settings"/>
		<ListPreference
			android:defaultValue="Aap"
			android:key="pref_key_list"
			android:summary="Current selected setting"
			android:title="List settings"/>
		<ListPreference
			android:defaultValue="Aap"
			android:key="pref_key_list"
			android:summary="Current selected setting"
			android:title="List settings"/>
		<EditTextPreference
			android:capitalize="words"
			android:defaultValue="@string/pref_default_display_name"
			android:inputType="textCapWords"
			android:key="example_text"
			android:maxLines="1"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:title="@string/pref_title_display_name"/>
		<SwitchPreference
			android:defaultValue="true"
			android:key="notifications_new_message"
			android:title="@string/pref_title_new_message_notifications"/>

		<!-- Allows the user to choose a ringtone in the 'notification' category. -->
		<!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
		<!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
		<RingtonePreference
			android:defaultValue="content://settings/system/notification_sound"
			android:dependency="notifications_new_message"
			android:key="notifications_new_message_ringtone"
			android:ringtoneType="notification"
			android:title="@string/pref_title_ringtone"/>
	</PreferenceCategory>
</PreferenceScreen>
