<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".KickPanelActivity"
	tools:showIn="@layout/activity_kickpanel">

	<TextView
		android:id="@+id/text_kickpanel_bluetoothstate"
		android:layout_width="165dp"
		android:layout_height="wrap_content"
		android:text="@string/kickpanel_bt_state_none"/>

	<TextView
		android:id="@+id/text_kickpanel_connected_device"
		android:layout_width="165dp"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:gravity="end"
		android:text="device: name"/>

	<Button
		android:id="@+id/button_device_list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/text_kickpanel_bluetoothstate"
		android:onClick="buttonStartDeviceList"
		android:text="@string/button_device_list"
		android:transitionName="ToKickPanel"/>

	<!--	<Button
			android:id="@+id/button_kickpanel_test"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_device_list"
			android:layout_marginTop="35dp"
			android:onClick="buttonClickKickpanelTest"
			android:text="@string/kickpanel_button_test"/> -->

	<Button
		android:id="@+id/button_kickpanel_listen"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/button_device_list"
		android:layout_marginTop="35dp"
		android:onClick="buttonClickKickpanelListen"
		android:text="@string/kickpanel_button_listen"/>

</RelativeLayout>